fix column spacing with css.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
-.column {
+.column div {
   width: 30%;
+  float: left;
 }
 
 .animals {
